--- a/app/login/style.module.css
+++ b/app/login/style.module.css
@@ -1,12 +1,14 @@
 .login {
     display: flex;
-    height: 100vh;
-    background-color: #f5f5f5;
+    /* height: screen; */
+    min-height: 700px;
+    background-color: white;
   }
   .loginFormContainer {
     width: 65%;
-    height: 100vh;
-    background: whitesmoke;
+    /* height: screen; */
+    min-height: 700px;
+    background: white;
     /* background: linear-gradient(45deg, #122285, #03071c); */
     display: flex;
     justify-content: center;
@@ -70,7 +72,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: screen; */
+    min-height: 700px;
     /* background: linear-gradient(225deg, #122285, #03071c 100%); */
     background: transparent;
     width: 35%;
