--- a/app/signup/style.module.css
+++ b/app/signup/style.module.css
@@ -1,12 +1,14 @@
 .login {
   display: flex;
-  height: 100vh;
-  background-color: #f5f5f5;
+  /* height: screen; */
+  min-height: 700px;
+  background-color: white;
 }
 .loginFormContainer {
   width: 65%;
-  height: 100vh;
-  background: whitesmoke;
+  height: screen;
+  min-height: 700px;
+  background: white;
   /* background: linear-gradient(45deg, #122285, #03071c); */
   display: flex;
   justify-content: center;
@@ -17,7 +19,7 @@
   height: 70%;
   width: 70%;
   /* background-color: #03071c72; */
-  background: #CFE6FA;
+  background: #cfe6fa;
   border-radius: 100px;
   display: flex;
   flex-direction: column;
@@ -70,7 +72,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: screen; */
+  min-height: 700px;
   /* background: linear-gradient(225deg, #122285, #03071c 100%); */
   background: transparent;
   width: 35%;
@@ -118,111 +121,106 @@
     margin: 0px 20px;
     border-radius: 20px;
   }
-  
 }
 
-
-.earthOverlay span{
+.earthOverlay span {
   position: absolute;
-  top:50%;
-  left:50%;
+  top: 50%;
+  left: 50%;
   width: 4px;
   height: 4px;
   background: #000;
   border-radius: 50%;
-  box-shadow: 0 0 0 4px rgba(255,255,255,0.1),0 0 0 8px rgba(255,255,255,0.1),0 0 20px rgba(255,255,255,0.1);
+  box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1),
+    0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 0.1);
   animation: animate 6s linear infinite;
 }
-.earthOverlay span::before{
-  content:'';
+.earthOverlay span::before {
+  content: "";
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   width: 300px;
   height: 1px;
-  background: linear-gradient(90deg,#000,transparent);
+  background: linear-gradient(90deg, #000, transparent);
 }
-@keyframes animate
-{
-  0%
-  {
-      transform: rotate(315deg) translateX(0);
-      opacity: 1;
+@keyframes animate {
+  0% {
+    transform: rotate(315deg) translateX(0);
+    opacity: 1;
   }
-  70%
-  {
-      opacity: 1;
+  70% {
+    opacity: 1;
   }
-  100%
-  {
-      transform: rotate(315deg) translateX(-1000px);
-      opacity: 0;
+  100% {
+    transform: rotate(315deg) translateX(-1000px);
+    opacity: 0;
   }
 }
-.earthOverlay span:nth-child(1){
+.earthOverlay span:nth-child(1) {
   top: 0;
   right: 0;
   left: initial;
   animation-delay: 0s;
   animation-duration: 2s;
 }
-.earthOverlay span:nth-child(2){
+.earthOverlay span:nth-child(2) {
   top: 0;
   right: 80px;
   left: initial;
   animation-delay: 1s;
   animation-duration: 6s;
 }
-.earthOverlay span:nth-child(3){
+.earthOverlay span:nth-child(3) {
   top: 80;
   right: 0px;
   left: initial;
   animation-delay: 2s;
   animation-duration: 2s;
 }
-.earthOverlay span:nth-child(4){
+.earthOverlay span:nth-child(4) {
   top: 0;
   right: 180px;
   left: initial;
   animation-delay: 3s;
   animation-duration: 1.5s;
 }
-.earthOverlay span:nth-child(5){
+.earthOverlay span:nth-child(5) {
   top: 0;
   right: 400px;
   left: initial;
   animation-delay: 4s;
   animation-duration: 2.5s;
 }
-.earthOverlay span:nth-child(6){
+.earthOverlay span:nth-child(6) {
   top: 0;
   right: 600px;
   left: initial;
   animation-delay: 2s;
   animation-duration: 6s;
 }
-.earthOverlay span:nth-child(7){
+.earthOverlay span:nth-child(7) {
   top: 300px;
   right: 0px;
   left: initial;
   animation-delay: 5s;
   animation-duration: 1.75s;
 }
-.earthOverlay span:nth-child(8){
+.earthOverlay span:nth-child(8) {
   top: 0px;
   right: 700px;
   left: initial;
   animation-delay: 6s;
   animation-duration: 1.25s;
 }
-.earthOverlay span:nth-child(9){
+.earthOverlay span:nth-child(9) {
   top: 0px;
   right: 1000px;
   left: initial;
   animation-delay: 7s;
   animation-duration: 2.25s;
 }
-.earthOverlay span:nth-child(9){
+.earthOverlay span:nth-child(9) {
   top: 0px;
   right: 450px;
   left: initial;
